Fixed footer on tablet breakpoint

--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -12,81 +12,115 @@
   justify-content: space-between;
   padding: 0 3.375rem;
 
-    &__copy-container {
-      @include block-item(20rem, 3.125rem);
+  @include tablet {
+    padding: 0 2rem;
+  }
+
+  @include desktop {
+    padding: 0 3.375rem;
+  }
+
+  &__copy-container {
+    @include tablet {
+      @include block-item(16rem, 3.125rem);
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-    }
 
-    &__copyright {
+      @include desktop {
+        width: 20rem;
+      }
+    }
+  }
+
+  &__copyright,
+  &__privacy-policy,
+  &__tac {
+    @include tablet {
+      font-size: .725rem;
       color: $primary-pale-blue;
       font-family: $primary-font;
-      font-size: .875rem;
       font-weight: 400;
     }
 
-    &__privacy-policy {
-      color: $primary-light-blue;
-      font-family: $primary-font;
+    @include desktop {
       font-size: .875rem;
-      font-weight: 400;
     }
+  }
 
-    &__tac {
-      color: $primary-light-blue;
-      font-family: $primary-font;
-      font-size: .875rem;
-      font-weight: 400;
-    }
+  &__privacy-policy,
+  &__tac {
+    color: $primary-light-blue;
+  }
 
-    &__btn-container {
+  &__btn-container {
+    @include tablet {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
     }
+  }
 
-    &__btn-register {
+  &__btn-register {
+    @include tablet {
       @include btn-main-container;
       margin-right: .8125rem;
     }
+  }
 
-    &__register {
+  &__register {
+    @include tablet {
       @include btn-txt;
+      font-size: .875rem;
     }
+  }
 
-    &__btn-contact {
+  &__btn-contact {
+    @include tablet {
       @include btn-secondary-container;
+      font-size: .875rem;
     }
+  }
 
-    &__contact {
+  &__contact {
+    @include tablet {
+      font-size: .875rem;
       @include btn-secondary-txt;
       white-space: nowrap;
     }
+  }
 
-    &__logo-wordmark {
+  &__logo-wordmark {
+    @include tablet {
       @include block-item(8.4375rem, 1.0625rem);
       transition: transform 0.2s ease;
       cursor: pointer;
+      font-size: .875rem;
     }
+  }
 
-    &__logo-container {
+  &__logo-container {
+    @include tablet {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding-right: 9.0081rem; 
-      border: 0.125rem solid transparent; 
+      border: 0.125rem solid transparent;
       transition: border 0.3s ease, padding 0.3s ease, border-radius 0.3s ease, transform 0.2s ease;
-    
+
+      @include desktop {
+        padding-right: 9.0081rem;
+      }
+
       &:hover {
-      @include borderGlowLogo(); 
-      padding: 1rem; 
-      border-radius: 1rem;
-    }
+        @include borderGlowLogo();
+        padding: 1rem;
+        border-radius: 1rem;
+      }
 
       &:active {
         transform: scale(0.95);
       }
     }
   }
+}
